--- a/rental_custom/views/sale_line_views.xml
+++ b/rental_custom/views/sale_line_views.xml
@@ -8,7 +8,8 @@
             <xpath expr="//field[@name='order_line']/form//field[@name='product_id']" position="before">
                 <!-- <label for="product_qty_rent" string="En existencia" style="color:#008f39" attrs="{'invisible': [('rental','=',False)]}"/> -->
                 <field name="product_qty_rent_str" nolabel="1"  widget="badge" decoration-success="product_qty_rent_str!=False"  style="color:#FFF; font-weight: bold;" 
-                    attrs="{'invisible': [('rental','=',False)]}"/>
+			attrs="{'invisible': [('rental','=',False)]}"/>
+		<field name="event_date" string="Fecha Evento" />
             </xpath>
         </field>
     </record>
