--- a/rental_custom/views/sale_order_views.xml
+++ b/rental_custom/views/sale_order_views.xml
@@ -17,7 +17,7 @@ License LGPL-3.0 or later (https://www.gnu.org/licenses/lgpl.html). -->
     <record id="view_sale_order_calendar_rental_custom" model="ir.ui.view">
         <field name="name">sale.order.calendar</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_calendar" />
+        <field name="inherit_id" ref="sale.view_sale_order_calendar" />
 	<field name="arch" type="xml">
 	    <calendar string="Sales Orders" date_start="event_date" color="state" hide_time="true" event_limit="50" quick_add="False">
 		<field name="currency_id" invisible="1"/>
