--- a/rental_custom/views/sale_order_views.xml
+++ b/rental_custom/views/sale_order_views.xml
@@ -2,6 +2,25 @@
 <!-- Copyright 2022 Xtendoo (http://xtendoo.es)
 License LGPL-3.0 or later (https://www.gnu.org/licenses/lgpl.html). -->
 <odoo>
+
+    <record id="view_order_tree_invoiced_amount" model="ir.ui.view">
+        <field name="name">sale.order.tree.invoiced_amount</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree" />
+        <field name="arch" type="xml">
+            <xpath
+                expr="//field[@name='invoice_status']"
+                position="after"
+            >
+                <field name="concurrent_orders"
+                       decoration-success="concurrent_orders == 'none'"
+                       decoration-warning="concurrent_orders == 'any'"
+                       widget="badge"
+                       optional="show"/>
+            </xpath>
+        </field>
+    </record>
+
     <record id="view_order_form" model="ir.ui.view">
         <field name="name">sale.order.form - sale_line_returned_qty</field>
         <field name="model">sale.order</field>
@@ -9,8 +28,8 @@ License LGPL-3.0 or later (https://www.gnu.org/licenses/lgpl.html). -->
         <field name="arch" type="xml">
             <xpath expr="//field[@name='date_order']" position="after">
                 <field name="event_date" />
-		<field name="place_number" />
-		<field name="not_reserved" />
+        		<field name="place_number" />
+		        <field name="not_reserved" />
             </xpath>
         </field>
     </record>
